# GbEmu

./: .gitignore  INC_B.gb  README.md  run.sh
.github/workflows/: build_desktop.yml  build_embedded.yml
GbEmu/: CMakelists.txt  run.sh
GbEmu/inc/: bus.hh  cart.hh  common.hh  dmg01.hh  instructions.hh  process.hh  registers.hh
GbEmu/src/: cart.cpp  dmg01.cpp  instructions.cpp  main.cpp  process.cpp  registers.cpp
cpp_emu/: bus.hh  cart.hh  common.hh  dmg01.hh  instructions.hh  logging.hh  main.hh  registers.hh
desktop/: .gitignore  CMakeLists.txt  GameboyEmulatorDesktop 2
desktop/inc/: etl_profile.h  graphics.hh
desktop/src/: main.cpp
docs/vroom_engine_docs/: Vroom Engine.md
docs/vroom_engine_docs/.obsidian/: workspace.json
docs/vroom_engine_docs/Gameboy Emulator/: Gameboy Emulator.md
docs/vroom_engine_docs/Games/: Games.md
docs/vroom_engine_docs/Hardware/: Hardware.md
docs/vroom_engine_docs/Subsystems/: Subsystems.md
docs/vroom_engine_docs/Utilities/: Utilities.md
electronics/: .gitignore
electronics/ESP-BOY-V1/: #auto_saved_files#  ESP-BOY.kicad_pcb  ESP-BOY.kicad_prl  ESP-BOY.kicad_pro  ESP-BOY.kicad_sch  ESP-BOY.kicad_sch-bak  _autosave-ESP-BOY.kicad_sch
embedded/: .gitignore  CMakeLists.txt  Kconfig  init_zephyr.sh  prj.conf  west.yml
embedded/app/: CMakeLists.txt  Kconfig  prj.conf  west.yml
embedded/app/boards/: esp32_devkitc_wroom.conf  esp32_devkitc_wroom.overlay  esp32_devkitc_wrover.overlay
embedded/app/config/: display.conf  vroom_engine.conf  wifi.conf
embedded/app/inc/: batt_man.hh  common.hh  controls.hh  engine.hh  settings.hh  version.hh
embedded/app/inc/connectivity/: bt.hh  wifi.hh
embedded/app/inc/states/: bt_controller.hh  pong.hh  settings_page.hh  state.hh  wifi_page.hh
embedded/app/inc/states/game/: custom_game.hh  pong.hh
embedded/app/inc/states/page/: bt_controller.hh  main_menu.hh  settings_page.hh  wifi_page.hh
embedded/app/inc/subsystems/: audio.hh  batt_man.hh  controls.hh  obsidian-main.css  settings.hh
embedded/app/src/: bt_main.c  controls.cpp  display.cpp  engine.cpp  main.cpp
embedded/app/src/connectivity/: bt.cpp  wifi.cpp
embedded/app/src/states/: main_menu.cpp  pong.cpp
embedded/app/src/states/game/: pong.cpp
embedded/app/src/states/page/: main_menu.cpp  wifi_page.cpp
embedded/app/src/subsystems/: controls.cpp  display.cpp  graphics.cpp
embedded/boards/: esp32.overlay
embedded/inc/: controls.hh  display.hh  engine.hh  etl_profile.h  graphics.hh  main.hh  state.hh
embedded/inc/states/: main_menu.hh  pong.hh  state.hh
embedded/src/: controls.cpp  display.cpp  engine.cpp  graphics.cpp  main.cpp  state.cpp
embedded/src/states/: main_menu.cpp  pong.cpp
emu_core/: .gitignore  CMakelists.txt  GameboyEmulatorCore  run.sh
emu_core/inc/: bus.hh  cpu.hh  emu.hh  graphics.hh  instructions.hh  logging.hh  ppu.hh  process.hh  registers.hh  stack.hh
emu_core/src/: cart.cpp  cpu.cpp  instructions.cpp  main.cpp  process.cpp  registers.cpp
my_emu/include/: common.h  cpu.h
my_emu/lib/: bus.c  cart.c  cpu.c  emu.c  instructions.c
roms/: INC_A.gb  INC_BC.gb
tools/: generate_rom.py
